add stick position to search bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1 class="title"></h1>
+    <!-- <h1 class="title"></h1> -->
     <img class="title__image" src="images/Rick_and_Morty.svg.png" width="320" />
     <main>
       <div class="search-bar-container" data-js="search-bar-container">
