--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
       </div>
       <ul class="card-container" data-js="card-container"></ul>
     </main>
+
+    <!-- nav to be implemented dynamically -->
     <nav class="navigation" data-js="navigation">
-      <button class="button button--prev" data-js="button-prev">
+      <!-- <button class="button button--prev" data-js="button-prev">
         previous
       </button>
       <span class="navigation__pagination" data-js="pagination">1/42</span>
-      <button class="button button--next" data-js="button-next">next</button>
+      <button class="button button--next" data-js="button-next">next</button> -->
     </nav>
   </body>
   <script type="module" src="./index.js"></script>
