refactoring search bar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <!-- <h1 class="title"></h1> -->
     <img class="title__image" src="images/Rick_and_Morty.svg.png" width="320" />
-    <main>
-      <div class="search-bar-container" data-js="search-bar-container">
+    <main id="mainElement">
+      <!-- <div class="search-bar-container" data-js="search-bar-container">
         <form action="" class="search-bar" data-js="search-bar">
           <input
             name="query"
@@ -30,7 +30,7 @@
             />
           </button>
         </form>
-      </div>
+      </div> -->
       <ul class="card-container" data-js="card-container"></ul>
     </main>
 
