--- a/index.html
+++ b/index.html
@@ -12,34 +12,10 @@
   <body>
     <!-- <h1 class="title"></h1> -->
     <img class="title__image" src="images/Rick_and_Morty.svg.png" width="320" />
-    <main>
-      <div class="search-bar-container" data-js="search-bar-container">
-        <form action="" class="search-bar" data-js="search-bar">
-          <input
-            name="query"
-            class="search-bar__input"
-            type="text"
-            placeholder="search characters"
-            aria-label="character name"
-          />
-          <button class="search-bar__button" aria-label="search for character">
-            <img
-              class="search-bar__icon"
-              src="assets/magnifying-glass.png"
-              alt=""
-            />
-          </button>
-        </form>
-      </div>
+    <main id="mainElement">
       <ul class="card-container" data-js="card-container"></ul>
     </main>
-    <nav class="navigation" data-js="navigation">
-      <button class="button button--prev" data-js="button-prev">
-        previous
-      </button>
-      <span class="navigation__pagination" data-js="pagination">1/42</span>
-      <button class="button button--next" data-js="button-next">next</button>
-    </nav>
+    <nav class="navigation" data-js="navigation"></nav>
   </body>
   <script type="module" src="./index.js"></script>
 </html>
