add commented out explanation on code" :q code

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <!-- <h1 class="title"></h1> -->
+    <!-- Title image -->
     <img class="title__image" src="images/Rick_and_Morty.svg.png" width="320" />
+    <!-- Main content area -->
     <main id="mainElement">
+      <!-- Container for character cards -->
       <ul class="card-container" data-js="card-container"></ul>
     </main>
+    <!-- Navigation bar -->
     <nav class="navigation" data-js="navigation"></nav>
   </body>
   <script type="module" src="./index.js"></script>
