add tittle__buttonclass and make tittle__image clickable

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
   </head>
   <body>
     <!-- Title image -->
-    <img class="title__image" src="images/Rick_and_Morty.svg.png" width="320" />
+    <button class="title__button">
+      <a href="index.html" alt="home">
+        <img
+          class="title__image"
+          alt="rick-and-morty"
+          src="images/Rick_and_Morty.svg.png"
+          width="320"
+        />
+      </a>
+    </button>
     <!-- Main content area -->
     <main id="mainElement">
       <!-- Container for character cards -->
